<resources>
    <string name="app_name">Pokemap</string>

    <string name="action_settings">Settings</string>
    <string name="action_relogin">Relogin</string>


    <string name="pref_cat_user_account">User Account</string>
    <string name="pref_warning" translatable="false">NOTE: Do NOT use your main account for this application!
        Instead, create and use a fake Pokémon Trainer Club account with a different password and email.</string>
    <string name="pref_username">Set Username</string>
    <string name="pref_username_key" translatable="false">UsernameKey</string>
    <string name="pref_default_username">John Doe</string>
    <string name="pref_password">Set Password</string>
    <string name="pref_password_key" translatable="false">PasswordKey</string>
    <string name="pref_default_password">***</string>

    <string name="pref_cat_general">General</string>
    <string name="pref_pokestops_title">Show Pokéstops</string>
    <string name="pref_pokestops_key" translatable="false">pokestops_checkbox</string>
    <string name="pref_gyms_title">Show Gyms</string>
    <string name="pref_gyms_key" translatable="false">gyms_checkbox</string>

    <string name="toast_credentials">Can\'t login. Please check your credentials</string>
    <string name="title_activity_poke_map">Pokemon Nearby</string>

    <string name="login_warning">It is recommended to
    instead create and use a fake Pokémon Trainer Club account with a different password and email or
        use a Google account not attached to your Pokemon Go account. As using this app could result in your account being </string>
    <string name="prompt_username">PTC Username</string>
    <string name="prompt_password">PTC Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_field_required">Field Required</string>
    <string name="title_activity_maps">Map</string>
    <string name="login_warning_title">Warning:</string>

    <string name="request_credentials_title">Insert your Pokemon Go credentials</string>
    <string name="search_pokemon_map_suggestion">(Long press on map to change searching position)</string>
    <string name="new_pokemon_found"> new catchable Pokemon have been found.</string>
    <string name="no_pokemon_found">No new Pokemon have been found.</string>
    <string name="pokemon_expires_in">Expires in: %1$d:%2$02ds</string>
    <string name="pokemon_expired">Expired</string>
    <string name="location_permission_denied">Location permission not granted!</string>
    <string name="waiting_location">Waiting on location...</string>
    <string name="location_found">Found you!</string>
    <string name="location_found_init">Found you!</string>
    <string name="map_not_initialized">The map is not initialized.</string>
    <string name="login_failed">Could not log in. Make sure your credentials are correct.</string>
    <string name="login_successfull">You have logged in successfully.</string>
    <string name="searching_pokemon">Searching...</string>
    <string name="unable_to_connect_server">Unable to contact the Pokemon GO servers. The servers may be down.</string>
    <string name="login_expired">The login token has expired. Getting a new one.</string>
    <string name="action_search">Search</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_search">Search</string>
    <string name="title_search">Search for Location</string>
    <string name="message_search">Enter Location to jump to:</string>
    <string name="no_location_found">No Location found</string>
    <string name="menu_location_menu">Location Menu</string>
    <string name="menu_search_location">Search</string>
    <string name="menu_mylocation">My Location</string>
    <string name="menu_addfavorite">Add Favorite</string>
    <string name="menu_favorites">Favorites</string>
    <string name="permission_text">Please allow locations to use this app</string>
    <string name="button_allow">Allow</string>
    <string name="app_settings">App Settings</string>
    <string name="alert_text_favorit_add">Please type in the name of the Favorit Place</string>
    <string name="alert_title_favorite_add">Add Favorite</string>
    <string name="menu_about">About this App</string>
    <string name="dialog_title_about">About this App</string>
    <string name="text_position_picked">Position Picked</string>

</resources>
